composer minimum-stability update, read me file update:

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
             "kundu\\LaravelFuncQueue\\": "src/"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "extra": {
         "laravel": {
             "providers": [
