--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "issues": "https://github.com/kundu/laravel-funcqueue/issues"
     },
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/queue": "^8.0"
+        "php": "^7.4 || *",
+        "illuminate/support": "^7.0 || *",
+        "illuminate/queue": "^7.0 || *"
     },
     "autoload": {
         "psr-4": {
