--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
             "kundu\\LaravelFuncQueue\\": "src/"
         }
     },
-    "minimum-stability": "dev", 
+    "minimum-stability": "stable",
     "version": "1.0.0"
 }
